<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upc.epsevg.passarllista.activities.AfegirAlumne">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/nom_de_lassignatura" />

    <EditText
        android:id="@+id/editText_nom_assignatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/textView_grup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText_nom_assignatura"
        android:text="@string/grups" />

    <EditText
        android:id="@+id/editText_grup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_grup"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_add_grup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText_grup"
        android:enabled="false"
        android:text="@string/afegir_grup" />

    <ListView
        android:id="@+id/listViewGrups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_add_grup" />

</RelativeLayout>
